--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "dotenv": "^16.4.7",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
+    "linkedom": "^0.18.9",
     "lucide-react": "^0.454.0",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
